Made some changes

--- a/emnlp2014/phrase_based_sentiment_analysis.tex
+++ b/emnlp2014/phrase_based_sentiment_analysis.tex
@@ -298,7 +298,7 @@ Topical n-gram with prior & \textbf{89.83}\\
 
 This paper made use of topical n-gram model for the binary sentiment classification problem. The motivation behind this
 approach was to use not only words but also phrases to classify documents. The model was trained with documents containing
-only subjective and negation words and bigrams formed by the combination of these. It also, made use of rules to 
+only subjective and negation words and bigrams formed by the combination of these. It also made use of rules to 
 assign topics to words and bigrams in the intialization stage of estimation. Results using a prior show statistically 
 significant improvement over the JST model. The paper also shows the use of LDA for resource generation, prompted by 
 observations made during error analysis. The system shows marginal improvement in accuracy after using the resources
